<resources>
    <string name="text_size">14px</string>
    <string name="text_tip">You will exit the App, are you sure to exit?</string>
    <string name="text_determin">YES</string>
    <string name="text_cancel">NO</string>
    <string name="todo">TODO</string>
    <string name="home_text">Home</string>
    <string name="mine_text">Mine</string>
    <string name="password_hint">Password</string>
    <string name="account_hint">Email</string>
    <string name="text_in_loginBtn">Login</string>
    <string name="text_in_registerBtn">Sign up</string>
    <string name="please_pick_image">请选择图片</string>
    <string name="notify_image_permission">为确保应用正常运行，请允许相机和读取权限。</string>
    <string name="app_name">Rifeng Guard</string>
    <string name="net_error">Net Error,Please Try Later!</string>
    <string name="unkown_error">Unknow Error,Please Try Later!</string>
    <string name="dialog_sure">Sure</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_update_now">Update Now</string>
    <string name="dialog_later">Latter</string>
    <string name="dialog_splash_screen_permission_title">Permission prompt</string>
    <string name="dialog_splash_screen_permission_content">This application requires the location and SD card permissions to ensure the normal functioning </string>
    <string name="dialog_are_your_sure_logout_title">Logout prompt</string>
    <string name="dialog_are_your_sure_logout_content">Are you sure logout?</string>
    <string name="dialog_version_title">Version prompt</string>
    <string name="dialog_new_version_found_content">New Version Was Found!</string>
    <string name="login_email_hint">Email-address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login">Login</string>
    <string name="login_signup">Register</string>
    <string name="title_activity_settings">Settings</string>
    <string name="email_must_be_not_null">E_Mail must be Not Empty!</string>
    <string name="pwd_must_be_not_null">Password must be Not Empty!</string>
    <string name="verfycode_must_be_not_null">VerifyCode must be Not Empty!</string>
    <string name="currentpassword_must_be_not_null">Current Password must be Not Empty!</string>
    <string name="repwd_must_be_not_null">RePassword must be Not Empty!</string>
    <string name="repwd_must_be_same_with_pwd">The Password must be consistent with the confirmation password!</string>
    <string name="pwd_format_error_length_error">Password regular error, Length must longer than 8</string>
    <string name="pwd_format_error_contain_error">Password regular error, Password must contain letters</string>
    <string name="incorrect_e_mail_formate">Incorrect email format!</string>
    <string name="register_title">Register</string>
    <string name="regemail_continue">Continue</string>
    <string name="regemail_email_hint_text">What\'s your email</string>
    <string name="regemail_email_hint_edit">Input your email</string>
    <string name="regemail_invitation_hint_text">What\'s your invitation code</string>
    <string name="regemail_invitation_hint_edit">Input your invitation code</string>
    <string name="regemail_password_hint_text">Set your password</string>
    <string name="regemail_password_hint_edit">Enter password</string>
    <string name="regemail_password_hint_edit_again">Re-enter password</string>
    <string name="regother_hint_text">Please supply others</string>
    <string name="regother_first_name_hint">First Name</string>
    <string name="regother_surname_hint">Last Name</string>
    <string name="regother_company_name_hint">Company Name</string>
    <string name="regother_address_hint">Address</string>
    <string name="regother_suburb_hint">Area</string>
    <string name="regother_postcode_hint">Postcode</string>
    <string name="regother_state_hint">State</string>
    <string name="regother_mobile_number_hint">Contact Number</string>
    <string name="regother_country_hint">Country</string>
    <string name="first_name_must_be_not_null">First Name Must Be Not Null</string>
    <string name="surname_must_be_not_null">Surname Must Be Not Null</string>
    <string name="state_must_be_not_null">State Must Be Not Null</string>
    <string name="country_must_be_not_null">Country Must Be Not Null</string>
    <string name="Regother_Area_required">Area is required</string>
    <string name="regreturn_return">Return</string>
    <string name="regreturn_hint1">Your account is now active and ready to use. Please check the confirmation email in your mailbox.</string>
    <string name="regreturn_hint2">Registe successfully\nA comfirmation email has been</string>
    <string name="regreturn_hint3">sent to your mailbox</string>
    <string name="modify_pwd_success">Modify password Success!</string>
    <string name="new_password_has_been_sent_to_your_mailbox">New password has been sent to your mailbox</string>
    <string name="pwdreset_title">Passwoed Reset</string>
    <string name="pwdreset_verify_code_title_hint_text">Please input VerifyCode</string>
    <string name="pwdreset_verify_code_hint_edit">Input VerifyCode</string>
    <string name="pwdreset_email_hint_text">What\'s your email?</string>
    <string name="pwdreset_email_hint_edit">Input your email</string>
    <string name="pwdreset_report_hint">Please find the password in your mailbox</string>
    <string name="pwdreset_success">Reset success</string>
    <string name="pwdchange_oldpwd_hint_text">Please input your password</string>
    <string name="pwdchange_oldpwd_hint_edit">Input your current password</string>
    <string name="pwdchange_newpwd_hint_text">Please input your new password</string>
    <string name="pwdchange_newpwd_hint_edit">New password</string>
    <string name="pwdchange_newpwd_again_hint_edit">Confirm New password</string>
    <string name="pwdchange_submit">Submit</string>
    <string name="change_my_pwd">Change my password</string>
    <string name="pwdchange_return_hint">New password has been set</string>
    <string name="pwdchange_login">Login</string>
    <string name="about_title">About Me</string>
    <string name="about_hint_text">Please supply others</string>
    <string name="about_country_hint">Address</string>
    <string name="about_state_hint">State</string>
    <string name="about_suburb_hint">Area</string>
    <string name="about_city_hint">City</string>
    <string name="about_plumber_name_hint">First name</string>
    <string name="about_plumbing_company_hint">Company name</string>
    <string name="about_mobile_phone_hint">Mobile Phone</string>
    <string name="about_email_hint">Email And Account</string>
    <string name="about_address_hint">Address</string>
    <string name="abount_surname_hint">Last name</string>
    <string name="about_save">Save</string>
    <string name="select">Select</string>
    <string name="please_select_agent">Please Select An Agent!</string>
    <string name="select_agent">Select Agent</string>
    <string name="no_data_to_send">Not Data!</string>
    <string name="home_title">Home Page</string>
    <string name="home_state_hint">Address/StreetNo</string>
    <string name="must_not_empty">&#160;should not be empty.</string>
    <string name="can_not_empty">&#160;should not be empty.</string>
    <string name="home_city_hint">Site Address(Street+Suburb)</string>
    <string name="home_address_hint">Project Name</string>
    <string name="home_post_code">Post Code</string>
    <string name="home_date_hint">Test Date</string>
    <string name="home_memo_hint">Pipe Brand and Type</string>
    <string name="home_foreman_hint">CC e-Mail</string>
    <string name="home_plumbing_company">Plumbing company</string>
    <string name="home_tested_by">Tester</string>
    <string name="home_history_button">History Record</string>
    <string name="home_test_button">Start Test</string>
    <string name="no_communication_is_blank">If there is no communication, it is blank.</string>
    <string name="home_state_must_not_be_empty">State/Province should not be empty.</string>
    <string name="home_city_must_not_be_empty">City should not be empty.</string>
    <string name="home_address_must_not_be_empty">Project Address should not be empty.</string>
    <string name="home_date_must_not_be_empty">Date should not be empty.</string>
    <string name="test_by_must_not_be_empty">Tester should not be empty.</string>
    <string name="pressuretest_basic_data">Basic Data</string>
    <string name="pressuretest_basic_project_name">Project Name</string>
    <string name="pressuretest_basic_address">Site Address(Street+Suberb</string>
    <string name="pressuretest_basic_postCode">Post Code</string>
    <string name="pressuretest_basic_test_time">Test Time</string>
    <string name="pressuretest_basic_Company">Company</string>
    <string name="pressuretest_pipe_brand_and_type">Pipe Brand and Type</string>
    <string name="pressuretest_basic_cc_email">CC e-Mail</string>
    <string name="pressuretest_basic_test_method">Test Method</string>
    <string name="pressuretest_battery_power">Battery Power</string>
    <string name="pressuretest_battery_tip">The power is in a hurry. Pls charge as soon as possible!</string>
    <string name="pressuretest_Current_Pressure">Current Pressure</string>
    <string name="pressuretest_select_the_tesing_pressure">SELECT THE TESTING PRESSURE</string>
    <string name="pressuretest_Pipeline_Diagram">Pipeline Diagram</string>
    <string name="pressuretest_at_most">at most</string>
    <string name="pressuretest_input_pipe_code">Please input the pipe code</string>
    <string name="pressuretest_save_success">Save Success</string>
    <string name="pressuretest_hint">Please select the testing pressure for this test</string>
    <string name="pressuretest_title">Pressure Test</string>
    <string name="pressuretest_start_pressure">Start Pressure\n%1$dKPa</string>
    <string name="pressuretest_current_pressure">Current Pressure\n%1$dKPa</string>
    <string name="pressuretest_test_no">Round %1$d test progress</string>
    <string name="pressuretest_test_sec">Time left %1$s</string>
    <string name="pressuretest_mode_hint">Model %1$d:%2$dKPa</string>
    <string name="pressuretest_state_abnormal">Abnormal</string>
    <string name="pressuretest_state_waiting">Waiting</string>
    <string name="pressuretest_state_pass">Pass</string>
    <string name="pressuretest_state_testing">Testing</string>
    <string name="pressuretest_start_test_continue">The last test has not ended yet. Continue?</string>
    <string name="pressuretest_test_progress_title">Test progress</string>
    <string name="pressuretest_test_progress_round">Round %1$d</string>
    <string name="pressuretest_test_progress_content">Setting pressure:%1$dkPa,\n Duration:%2$dS,\n Maximum test pressure allowed:%3$dkPa,\nPressure drop allowance:%4$dkPa</string>
    <string name="pressuretest_popup_information">Information</string>
    <string name="pressuretest_popup_reset">Reset</string>
    <string name="pressuretest_popup_disconnect">Disconnect</string>
    <string name="dilog_title_pt_notice">Notice:</string>
    <string name="dilog_content_pt_disclaimer">Disclaimer:As per Australian standard,the pressure test should be undertaken at %1$dKPa.</string>
    <string name="dilog_btn_pt_agree">I Agree</string>
    <string name="dilog_btn_pt_ok">OK</string>
    <string name="dilog_btn_pt_cancel">Cancel</string>
    <string name="dilog_btn_pt_accept">Accept</string>
    <string name="dilog_btn_pt_try_again">Try Again</string>
    <string name="dilog_content_pt_test_pass">Test passed.</string>
    <string name="dilog_content_pt_test_fail">Test failed,send result to mailbox.</string>
    <string name="dilog_content_pt_connent_ble">Do you want to connect the Bluetooth Connection.</string>
    <string name="dilog_content_pt_upload_diagram">Do you want to upload photos and batch number of pipes?</string>
</resources>