<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/quit_dialog_bg"
    >
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/dialog_splash_screen_permission_title"
        android:textSize="18sp"
        android:textColor="@color/Color_Word85"
        />
    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/dialog_splash_screen_permission_content"
        android:textColor="#000000"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >
        <Button
            android:id="@+id/btn_sure"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dialog_sure"
            android:textColor="#0081CC"
            android:background="@drawable/quit_dialog_bg"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>