<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="67dp"
        android:src="@mipmap/title_feekback" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text="@string/text_tip"
        android:textSize="20sp"
        android:textColor="#000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/text_cancel" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#0081CC"
            android:text="@string/text_determin"
            />
    </LinearLayout>
</LinearLayout>